--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     body {
       margin: 0;
       padding: 0;
-      background: url('https://i.ibb.co/DPZcYMXD/crafting-table-updated.jpg') center/cover no-repeat;
+      background: url('https://i.ibb.co/DPZcYMXD/crafting-table-updated.jpg') center no-repeat;
+      background-size: auto;
       height: 100vh;
       display: flex;
       justify-content: center;
@@ -52,4 +53,3 @@
   </div>
 </body>
 </html>
-
