--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       margin: 0;
       padding: 0;
       background: url('https://i.ibb.co/DPZcYMXD/crafting-table-updated.jpg') center no-repeat;
-      background-size: auto;
+      background-size: 100%;
       height: 100vh;
       display: flex;
       justify-content: center;
