--- a/index.html
+++ b/index.html
@@ -36,13 +36,15 @@
     }
 
     #basket {
-      left: 20%;
-      top: 55%;
-    }
+  left: 20%;
+  top: 55%;
+  width: 300px; /* или любое другое значение */
+}
 
     #pot {
       right: 20%;
       top: 50%;
+      width: 300px;
     }
   </style>
 </head>
