Update title and adjust layout in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Стол с элементами</title>
+  <title>С днём рождения Джулс!</title>
   <style>
     body {
       margin: 0;
@@ -37,14 +37,14 @@
 
     #basket {
   left: 20%;
-  top: 30%;
+  top: 27%;
   width: 300px; /* или любое другое значение */
 }
 
     #pot {
       right: 20%;
       top: 50%;
-      width: 600px;
+      width: 1000px;
     }
   </style>
 </head>
