--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 }
 
     #pot {
-      right: 27%;
+      right: 35%;
       top: 18%;
       width: 800px;
     }
@@ -51,7 +51,7 @@
 <body>
   <div class="container">
     <img id="basket" class="item" src="https://i.ibb.co/hxdH1ChV/Chat-GPT-Image-17-2025-19-07-18.png" alt="Корзинка" />
-    <img id="pot" class="item" src="https://i.ibb.co/LDp4Xgtc/Cauldron-Animation-Wider-616-width.gif" alt="Кастрюля" />
+    <img id="pot" class="item" src="https://i.ibb.co/hp2tFd3/image.gif" alt="Кастрюля" />
   </div>
 </body>
 </html>
