--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       margin: 0;
       padding: 0;
-      background: url('https://i.ibb.co/DPZcYMXD/crafting-table-updated.jpg') center no-repeat;
+      background: url('https://i.ibb.co/Psxj0Cdb/image.jpg') center no-repeat;
       background-size: 70%;
       height: 100vh;
       display: flex;
