--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     body {
       margin: 0;
       padding: 0;
-      background: url('https://i.ibb.co/Psxj0Cdb/image.jpg') center no-repeat;
-      background-size: 70%;
+      background: url('https://i.ibb.co/NnLgHch1/upscalemedia-transformed-2.png" alt="upscalemedia-transformed-2') center no-repeat;
+      background-size: auto;
       height: 100vh;
       display: flex;
       justify-content: center;
