Change background-size from contain to cover

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       background-image: url('https://i.ibb.co/HprLk5vN/upscalemedia-transformed-2.png');
       background-repeat: no-repeat;
       background-position: center top; /* регулируешь положение */
-      background-size: contain; /* сохраняет оригинальный размер */
+      background-size: cover; /* сохраняет оригинальный размер */
     }
 
     .container {
