--- a/index.html
+++ b/index.html
@@ -46,9 +46,10 @@
     }
 
     #pot {
-      right: 23%;
-      top: 25%;
+      right: 28%;
+      top: 27%;
       width: 1000px;
+      box-shadow: inset 0 0 0 5px #4a0000;
     }
   </style>
 </head>
