--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
     }
 
     #pot {
-      right: 28%;
-      top: 27%;
+      left: 28%;
+      top: 35%;
       width: 1000px;
-      box-shadow: inset 0 0 0 5px #4a0000;
+      filter: drop-shadow(0 0 0 #4a0000) drop-shadow(0 0 5px #4a0000);
     }
   </style>
 </head>
