--- a/index.html
+++ b/index.html
@@ -46,17 +46,16 @@
     }
 
     #pot {
-      left: 28%;
-      top: 35%;
+      left: 20%;
+      top: 25%;
       width: 1000px;
-      filter: drop-shadow(0 0 0 #4a0000) drop-shadow(0 0 5px #4a0000);
     }
   </style>
 </head>
 <body>
   <div class="container">
     <img id="basket" class="item" src="https://i.ibb.co/hxdH1ChV/Chat-GPT-Image-17-2025-19-07-18.png" alt="Корзинка" />
-    <img id="pot" class="item" src="https://i.ibb.co/hp2tFd3/image.gif" alt="Кастрюля" />
+    <img id="pot" class="item" src="https://i.ibb.co/QFvrZd3S/image.gif" alt="Кастрюля" />
   </div>
 </body>
 </html>
