--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     }
 
     #pot {
-      left: 30%;
+      left: 40%;
       top: 25%;
       width: 500px;
     }
@@ -55,7 +55,7 @@
 <body>
   <div class="container">
     <img id="basket" class="item" src="https://i.ibb.co/hxdH1ChV/Chat-GPT-Image-17-2025-19-07-18.png" alt="Корзинка" />
-    <img id="pot" class="item" src="https://i.ibb.co/QFvrZd3S/image.gif" alt="Кастрюля" />
+    <img id="pot" class="item" src="https://i.ibb.co/wT5nKKV/image.gif" alt="Кастрюля" />
   </div>
 </body>
 </html>
