Add z-index to basket and pot styles

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
       left: 5%;
       top: 27%;
       width: 22%; /* адаптивный размер */
+      z-index: 10;
     }
 
     /* Кастрюля */
@@ -47,6 +48,7 @@
       left: 33%;
       top: 20%;
       width: 36%; /* адаптивный размер */
+      z-index: 1;
     }
   </style>
 </head>
