--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     #basket {
       left: 8%;
       top: 30%;
-      width: 26%; /* адаптивный размер */
+      width: 26%;
       z-index: 10;
     }
 
@@ -48,7 +48,7 @@
     #pot {
       left: 33%;
       top: 20%;
-      width: 36%; /* адаптивный размер */
+      width: 36%;
       z-index: 1;
     }
 
@@ -56,8 +56,9 @@
     .berry {
       position: absolute;
       width: 10%;
-      pointer-events: none; 
       user-select: none;
+      cursor: grab;
+      pointer-events: auto;
       z-index: 20;
     }
   </style>
@@ -88,6 +89,7 @@
     const basketRect = basket.getBoundingClientRect();
     const containerRect = container.getBoundingClientRect();
 
+    // Появляется возле корзины
     berry.style.left = (basketRect.left - containerRect.left + basketRect.width * 0.5) + "px";
     berry.style.top = (basketRect.top - containerRect.top + basketRect.height * 0.3) + "px";
 
@@ -102,6 +104,7 @@
     function onMouseDown(e) {
       offsetX = e.clientX - elem.offsetLeft;
       offsetY = e.clientY - elem.offsetTop;
+      elem.style.cursor = "grabbing";
 
       document.addEventListener("mousemove", onMouseMove);
       document.addEventListener("mouseup", onMouseUp);
@@ -113,8 +116,11 @@
     }
 
     function onMouseUp(e) {
+      elem.style.cursor = "grab";
+
       document.removeEventListener("mousemove", onMouseMove);
       document.removeEventListener("mouseup", onMouseUp);
+
       checkDrop(elem);
     }
 
@@ -132,9 +138,9 @@
       berryRect.bottom > potRect.top;
 
     if (overlap) {
-      berry.style.transition = "0.3s";
+      berry.style.transition = "0.25s";
       berry.style.transform = "scale(0)";
-      setTimeout(() => berry.remove(), 300);
+      setTimeout(() => berry.remove(), 250);
     }
   }
 </script>
