--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
     /* Корзина */
     #basket {
       left: 8%;
-      top: 26%;
+      top: 25%;
       width: 26%;
+      filter: drop-shadow(0px 30px 25px rgba(0,0,0,0.3));
       z-index: 10;
     }
 
@@ -49,6 +50,7 @@
       left: 33%;
       top: 20%;
       width: 36%;
+      filter: drop-shadow(0px 35px 30px rgba(0,0,0,0.35));
       z-index: 1;
     }
 
