--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
     #wand {
       position: absolute;
       left: 63%;
-      top: 55%;
-      width: 18%;
+      top: 70%;
+      width: 24%;
       transform: rotate(-20deg);
       filter: drop-shadow(0px 8px 3px rgba(0,0,0,0.25));
       z-index: 5;
@@ -151,7 +151,7 @@
   const steamText = document.getElementById("steam-text");
 
   const berrySrc = "https://i.ibb.co/Hfdh9TPG/Chat-GPT-Image-17-2025-19-01-18.png";
-  const poofSrc = "https://i.ibb.co/4fQnZ1f/cloud.png"; // можно заменить на любое облачко
+  const poofSrc = "https://opengameart.org/sites/default/files/gif_4.gif"; // можно заменить на любое облачко
 
   let currentBerry = null;
 
@@ -219,7 +219,7 @@
   // ПУФ-Анимация
   function triggerPoof(x, y) {
     const puff = document.createElement("img");
-    puff.src = "https://i.ibb.co/pxmjQ42/poof.png"; // красивое облачко
+    puff.src = "https://opengameart.org/sites/default/files/gif_4.gif"; // красивое облачко
     puff.className = "poof";
 
     container.appendChild(puff);
