--- a/index.html
+++ b/index.html
@@ -150,9 +150,42 @@
   const steamText = document.getElementById("steam-text");
 
   const berrySrc = "https://i.ibb.co/Hfdh9TPG/Chat-GPT-Image-17-2025-19-01-18.png";
-  const poofSrc = "https://opengameart.org/sites/default/files/gif_4.gif"; // можно заменить на любое облачко
+
+  // 🔥 29 текстов баблов
+  const messages = [
+    "После квиддича Дина словно летела по школьным коридорам...",
+    "Она улыбалась так широко, что щёки болели...",
+    "В голове всё ещё звучал свист ветра...",
+    "Она думала, что это был лучший день в семестре...",
+    "Сердце ещё колотилось после полёта...",
+    "Она бы рассказала об этом каждому, кто захочет слушать...",
+    "Хотя она знала, что не каждому можно...",
+    "Потому что некоторые просто не поверят...",
+    "Но всё равно — эмоции переполняли...",
+    "Казалось, что мир стал на тон светлее...",
+    "Башня была уже близко...",
+    "А настроение было таким, что хотелось подпрыгнуть...",
+    "Как будто сама магия витала в воздухе...",
+    "И тянула её вперёд...",
+    "К новым приключениям...",
+    "К новым историям...",
+    "К новым победам...",
+    "Её шаги становились всё быстрее...",
+    "Она чувствовала, как растягивается улыбка...",
+    "И как внутри всё греет какое-то счастливое чувство...",
+    "Словно маленькое пламя...",
+    "Которое не потушить...",
+    "И которое хочется сохранить...",
+    "И поделиться...",
+    "Хоть с кем-то особенным...",
+    "Тем, кто точно поймёт...",
+    "Кто улыбнётся в ответ...",
+    "И просто скажет: «Я рад за тебя»...",
+    "И тогда её счастье станет ещё ярче..."
+  ];
 
   let currentBerry = null;
+  let bubbleIndex = 0; // сколько раз бросили клубнику
 
   // КЛИК ПО КОРЗИНЕ — создаём клубнику
   basket.addEventListener("click", (e) => {
@@ -209,16 +242,17 @@
       triggerPoof(berryRect.left, berryRect.top);
       berry.remove();
       currentBerry = null;
+
       showSteamText();
     } else {
       currentBerry = null;
     }
   }
 
-  // ПУФ-Анимация
+  // Пуф
   function triggerPoof(x, y) {
     const puff = document.createElement("img");
-    puff.src = "https://opengameart.org/sites/default/files/gif_4.gif"; // красивое облачко
+    puff.src = "https://opengameart.org/sites/default/files/gif_4.gif";
     puff.className = "poof";
 
     container.appendChild(puff);
@@ -231,16 +265,31 @@
     });
 
     setTimeout(() => {
-      puff.style.transform = "translate(-50%, -50%) scale(0.1)";
       puff.style.opacity = "0";
       setTimeout(() => puff.remove(), 400);
-    }, 300);
+    }, 600);
   }
 
-  // ПОЯВЛЕНИЕ БАБЛА
+  // Появление бабла с новым текстом
   function showSteamText() {
-    steamText.style.transform = "translate(-50%, -50%) scale(1)";
-    steamText.style.opacity = "1";
+    if (bubbleIndex >= messages.length) return; // не больше 29
+
+    // 🔥 Устанавливаем текст
+    steamText.innerHTML = messages[bubbleIndex];
+    bubbleIndex++;
+
+    // 🔥 Перезапуск анимации
+    steamText.style.transition = "none";
+    steamText.style.transform = "translate(-50%, -50%) scale(0)";
+    steamText.style.opacity = "0";
+
+    requestAnimationFrame(() => {
+      requestAnimationFrame(() => {
+        steamText.style.transition = "transform 0.5s ease, opacity 0.5s ease";
+        steamText.style.transform = "translate(-50%, -50%) scale(1)";
+        steamText.style.opacity = "1";
+      });
+    });
   }
 </script>
 
