--- a/index.html
+++ b/index.html
@@ -101,21 +101,6 @@
       transition: transform 0.5s ease, opacity 0.5s ease;
     }
 
-    /* Хвостик бабла */
-    #steam-text::after {
-      content: "";
-      position: absolute;
-      bottom: -12px;
-      left: 15%;
-
-      width: 0;
-      height: 0;
-
-      border-left: 10px solid transparent;
-      border-right: 10px solid transparent;
-      border-top: 12px solid rgba(255,255,255,0.95);
-    }
-
     /* Пуф */
     .poof {
       position: absolute;
@@ -153,9 +138,9 @@
 
   // 🔥 29 текстов баблов
   const messages = [
-    "После квиддича Дина словно летела по школьным коридорам...",
-    "Она улыбалась так широко, что щёки болели...",
-    "В голове всё ещё звучал свист ветра...",
+    "Джулс, с днем рождения! Пусть этот год принесёт тебе много сил, радости и крутых событий. Желаю ярких впечатлений, вдохновения во всём за что берёшься и крепкого здоровья.<br><br>Дина",
+    "Джулс, с днем рождения!<br><br>Каждый день испытывай удовольствие от жизни глобально и в мелочах, пусть все мечты непременно сбудутся. Благополучия, всех ресурсов в достатке, здоровья на максималках и большого-прибольшого счастья! *сердце*<br><br>Хаттори Райто",
+    "Поздравляю с Днем Рождения! Кушайте много сладкого и пейте много вкусного в Ваш день 🎂<br><br>Аделин Эйвери",
     "Она думала, что это был лучший день в семестре...",
     "Сердце ещё колотилось после полёта...",
     "Она бы рассказала об этом каждому, кто захочет слушать...",
