--- a/index.html
+++ b/index.html
@@ -141,20 +141,20 @@
     "Джулс, с днем рождения! Пусть этот год принесёт тебе много сил, радости и крутых событий. Желаю ярких впечатлений, вдохновения во всём за что берёшься и крепкого здоровья.<br><br>Дина",
     "Джулс, с днем рождения!<br><br>Каждый день испытывай удовольствие от жизни глобально и в мелочах, пусть все мечты непременно сбудутся. Благополучия, всех ресурсов в достатке, здоровья на максималках и большого-прибольшого счастья! *сердце*<br><br>Хаттори Райто",
     "Поздравляю с Днем Рождения! Кушайте много сладкого и пейте много вкусного в Ваш день 🎂<br><br>Аделин Эйвери",
-    "Она думала, что это был лучший день в семестре...",
-    "Сердце ещё колотилось после полёта...",
-    "Она бы рассказала об этом каждому, кто захочет слушать...",
-    "Хотя она знала, что не каждому можно...",
-    "Потому что некоторые просто не поверят...",
-    "Но всё равно — эмоции переполняли...",
-    "Казалось, что мир стал на тон светлее...",
-    "Башня была уже близко...",
-    "А настроение было таким, что хотелось подпрыгнуть...",
-    "Как будто сама магия витала в воздухе...",
-    "И тянула её вперёд...",
-    "К новым приключениям...",
-    "К новым историям...",
-    "К новым победам...",
+    "Дорогая Джулс!<br><br>Вот ты и стала старше на один год, а это значит, что ты всё ближе к «Мы можем называть её бабулею, а вы зовите её Джулией». Вообще-то, быть мудрой женщиной в летах не так уж и плохо! Поэтому желаю, чтобы возраст не наводил грусть, а был в радость. Пусть в твоей жизни всё будет хорошо. Работа работается, мечты сбываются, метла летает, семья процветает.<br><br>Люблю! Леончик!",
+    "Желаю Вам крепкого здоровья, много магических открытий, блестящих идей и таких же отважных студентов, какими Вы помогали становиться поколениям гриффиндорцев.<br><br>Пусть Ваш день будет полон тепла, улыбок и небольшого волшебства (обещаю, никаких проклятий или шалостей из нашей гостиной!).<br><br>С уважением и добрыми пожеланиями,<br>студентка Слизерина ✨🐍<br><br>Владислава Грин",
+    "С днём рождения!!! Всего наилучшего и самого волшебного в жизни! :D<br><br>Герон Вайтмор",
+    "Искренне желаю всего самого лучшего! Здоровья, счастья, много галлеонов и всего, что захочется!<br><br>Патриция Роксинбург",
+    "Поздравляю с самым лучшим и весёлым праздником!) Пусть каждый день приносит радость, новые возможности и приятные сюрпризы.<br><br>Пусть в жизни всегда будет гармония, любовь и благополучие. Пусть все планы реализуются, а рядом всегда будут верные друзья и близкие люди. Ура!))<br><br>Энни Мур",
+    "Я до сих пор не знаю, как правильно обращаться, поэтому пусть будет так))<br><br>Миссис Джонсон-Шрив-Стиверсон, поздравляю Вас с Днём Рождения! Счастья, пусть все заклинания удаются успешно и часто случаются звездопады, чтобы загадывать много-много желаний, которые обязательно исполнятся!<br><br>От всей души желаю лично,<br>Вам, как домашнему коту,<br>Чтобы всегда жилось отлично<br>И на работе, и в быту!<br><br>Грэйс Грейлэнд",
+    "ДЖУУУУУУУУУЛС! Поздравляю тебя с днем рождения!<br>Ты невероятно классный, душевный и приятный человечек, знакомству и общению с которым я очень рад. Хочу, чтобы у тебя всегда было хорошее настроение и все получалось ❤️<br>Но главное - будь счастливой!<br>Очень люблю!!!!!1<br><br>Кевин Хоукинс",
+    "С ДНЁЁЁМ РОЖДЕНИЯЯЯ!!!!!! Ты — пушка, бомба, ракета квиддича и не только! Отличная наставница и собеседница. Желаю тебе здоровья, счастья, а также счастья и здоровья!<br><br>Кассия Дэверо",
+    "Уважаемая Джулия, поздравляю с днём рождения! Желаю, чтобы каждый момент твоей жизни был наполнен радостью, улыбками и счастьем. Пусть сбываются все твои мечты, а рядом всегда будут верные друзья и любящая семья. Пусть этот день будет таким же ярким и незабываемым, как ты сама!<br><br>Мы тебя любим, капитан!<br><br>Джоанна",
+    "Здравствуйте-здравствуйте, дорогая и всеми любимая Джулия Джонсон-Шрив-Стиверсон-обладательница-самой-длинной-фамилии-в-мире! Я хочу поздравить Вас с Днём Рождения!<br><br>Хоть я вас и совсем не знаю, совсем недавно нахожусь в Хогвартсе, но я уже уверена, что вы и вправду горячо любимы ребятами из Хогвартса Дамблдора!<br><br>Хочу пожелать вам всего-всего: и удач, и неудач, дабы был балас вселенной! Радуйте учеников, преподователей и многих других людей своей улыбкой и хорошим настроением. Просто будьте счастливы, вот что!<br><br>С днём рождения!<br><br>Скарлетт Картер",
+    "С днём рождения мисисс Джонсон-Шрив-Стиверсон! Вы невероятная! Во всем! В квиддиче с вами невероятно комфортно летать в одной команде, а против вас невероятно интересно, вы всегда поддерживаете львят во всём, а музыкальные вечера в ОГ, которые вы ведёте, гриффиндорски зажигательны! Пусть каждый день будет ярким, необычным и волшебным! Пусть теплые слова звучат чаще, напоминая, что вы - прекрасны! Пусть исполняются мечты, сбываются желания и всегда и всюду окружают добрые чудеса!<br><br>Evylin McFie",
+    "🥳 с днем рождения поздравляю! 🎉🎂🎁<br><br>Аннет",
+    "Джулс! Поздравляю с днём рождения) Желаю ещё много-много проглоченных снитчей, сил на энциклопедию и другие идеи - и времени, конечно. И самых искренних и приятных воспоминаний не только на квиддичном стадионе, а и в стенах Школы ещё долго-долго. С праздником!<br><br>Шелия",
+    "Миссис «Вы знаете..... Так получилось.... Что я тоже миссис Шрив-Стиверсон » (да, примерно так я Вас и запомнила), с днём рождения Вас! Ешьте больше еды, но не ешьте снитчи, говорят, это плохо влияет на пищеварение. Успехов Вам в квиддиче, хороших новичков в команду!<br><br>Адрианна Сноу",
     "Её шаги становились всё быстрее...",
     "Она чувствовала, как растягивается улыбка...",
     "И как внутри всё греет какое-то счастливое чувство...",
