--- a/index.html
+++ b/index.html
@@ -103,12 +103,10 @@
       text-align: justify;       /* весь текст по ширине */
   }
     
-    #steam-text .last-para {
-  font-weight: bold;
-  color: #944a42;
-  display: block;
-  text-align: center; /* по центру */
-  margin-top: 0.5em;  /* отступ сверху, если нужно */
+    #steam-text p:last-child {
+  font-weight: bold;       /* жирный */
+  color: #944a42;          /* нужный цвет */
+  text-align: center;      /* центр последнего абзаца, если нужно */
 }
 
     /* Пуф */
@@ -131,13 +129,6 @@
     <!-- Волшебная палочка -->
     <img id="wand" class="item" src="https://i.ibb.co/BVRr2VR2/Chat-GPT-Image-19-2025-08-36-05.png" alt="Волшебная палочка" />
 
-    <!-- Пар и текст-бабл -->
-    <div id="steam-text">
-      После квиддича Дина словно летела по школьным коридорам в направлении своей башни. 
-      Не на метле, но всегда, кстати, мечтала полетать по школе, но увы.
-    </div>
-  </div>
-
 <script>
   const basket = document.getElementById("basket");
   const pot = document.getElementById("pot");
@@ -148,9 +139,9 @@
 
   // 🔥 29 текстов баблов
   const messages = [
-    "Джулс, с днем рождения! Пусть этот год принесёт тебе много сил, радости и крутых событий. Желаю ярких впечатлений, вдохновения во всём за что берёшься и крепкого здоровья.<br><br><span class="last-para">Дина</span>",
-    "Джулс, с днем рождения!<br><br>Каждый день испытывай удовольствие от жизни глобально и в мелочах, пусть все мечты непременно сбудутся. Благополучия, всех ресурсов в достатке, здоровья на максималках и большого-прибольшого счастья! *сердце*<br><br><span class="last-para">Хаттори Райто</span>",
-    "Поздравляю с Днем Рождения! Кушайте много сладкого и пейте много вкусного в Ваш день 🎂<br><br><span class="last-para">Аделин Эйвери</span>",
+    "Джулс, с днем рождения! Пусть этот год принесёт тебе много сил, радости и крутых событий. Желаю ярких впечатлений, вдохновения во всём за что берёшься и крепкого здоровья.<br><br>Дина",
+    "Джулс, с днем рождения!<br><br>Каждый день испытывай удовольствие от жизни глобально и в мелочах, пусть все мечты непременно сбудутся. Благополучия, всех ресурсов в достатке, здоровья на максималках и большого-прибольшого счастья! *сердце*<br><br>Хаттори Райто",
+    "Поздравляю с Днем Рождения! Кушайте много сладкого и пейте много вкусного в Ваш день 🎂<br><br>Аделин Эйвери",
     "Дорогая Джулс!<br><br>Вот ты и стала старше на один год, а это значит, что ты всё ближе к «Мы можем называть её бабулею, а вы зовите её Джулией». Вообще-то, быть мудрой женщиной в летах не так уж и плохо! Поэтому желаю, чтобы возраст не наводил грусть, а был в радость. Пусть в твоей жизни всё будет хорошо. Работа работается, мечты сбываются, метла летает, семья процветает.<br><br>Люблю! Леончик!",
     "Желаю Вам крепкого здоровья, много магических открытий, блестящих идей и таких же отважных студентов, какими Вы помогали становиться поколениям гриффиндорцев.<br><br>Пусть Ваш день будет полон тепла, улыбок и небольшого волшебства (обещаю, никаких проклятий или шалостей из нашей гостиной!).<br><br>С уважением и добрыми пожеланиями,<br>студентка Слизерина ✨🐍<br><br>Владислава Грин",
     "С днём рождения!!! Всего наилучшего и самого волшебного в жизни! :D<br><br>Герон Вайтмор",
@@ -189,41 +180,38 @@
   });
 
   function createAndAttachBerry(e) {
-  const berry = document.createElement("img");
-  berry.src = berrySrc;
-  berry.className = "berry";
-  container.appendChild(berry);
+    const berry = document.createElement("img");
+    berry.src = berrySrc;
+    berry.className = "berry";
+    container.appendChild(berry);
 
-  currentBerry = berry;
+    currentBerry = berry;
 
-  // Ждем, пока картинка загрузится, чтобы корректно взять размер
-  berry.onload = () => {
     moveBerryToMouse(berry, e);
-  };
 
-  berry.style.pointerEvents = "none"; // чтобы не мешала мыши
+    berry.style.pointerEvents = "none";
 
-  function followMouse(ev) {
-    moveBerryToMouse(berry, ev);
+    function followMouse(ev) {
+      moveBerryToMouse(berry, ev);
+    }
+
+    function releaseBerry(ev) {
+      document.removeEventListener("mousemove", followMouse);
+      document.removeEventListener("mouseup", releaseBerry);
+      berry.style.pointerEvents = "auto";
+      checkDrop(berry);
+    }
+
+    document.addEventListener("mousemove", followMouse);
+    document.addEventListener("mouseup", releaseBerry);
   }
 
-  function releaseBerry(ev) {
-    document.removeEventListener("mousemove", followMouse);
-    document.removeEventListener("mouseup", releaseBerry);
-    berry.style.pointerEvents = "auto"; // снова включаем для коллизий
-    checkDrop(berry);
+  // Перемещение ягоды за мышью
+  function moveBerryToMouse(berry, e) {
+    const size = berry.offsetWidth || 50;
+    berry.style.left = (e.clientX - size / 2) + "px";
+    berry.style.top = (e.clientY - size / 2) + "px";
   }
-
-  document.addEventListener("mousemove", followMouse);
-  document.addEventListener("mouseup", releaseBerry);
-}
-
-function moveBerryToMouse(berry, e) {
-  const rect = berry.getBoundingClientRect();
-  const size = rect.width || 50; // берём фактический размер
-  berry.style.left = (e.clientX - size / 2) + "px";
-  berry.style.top = (e.clientY - size / 2) + "px";
-}
 
   // Проверка попадания в кастрюлю
   function checkDrop(berry) {
