--- a/index.html
+++ b/index.html
@@ -128,7 +128,14 @@
 
     <!-- Волшебная палочка -->
     <img id="wand" class="item" src="https://i.ibb.co/BVRr2VR2/Chat-GPT-Image-19-2025-08-36-05.png" alt="Волшебная палочка" />
-
+  </div>
+  
+ <!-- Пар и текст-бабл -->
+    <div id="steam-text">
+      После квиддича Дина словно летела по школьным коридорам в направлении своей башни. 
+      Не на метле, но всегда, кстати, мечтала полетать по школе, но увы.
+    </div>
+  
 <script>
   const basket = document.getElementById("basket");
   const pot = document.getElementById("pot");
