--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>С днём рождения, Джулс!</title>
 
+  <link href="https://fonts.googleapis.com/css2?family=Bad+Script&display=swap" rel="stylesheet">
+
   <style>
     body {
       margin: 0;
@@ -16,6 +18,7 @@
       background-position: center center;
       background-size: cover;
       user-select: none;
+      font-family: "Bad Script", cursive;
     }
 
     .container {
