--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
       После квиддича Дина словно летела по школьным коридорам в направлении своей башни. 
       Не на метле, но всегда, кстати, мечтала полетать по школе, но увы.
     </div>
+  </div>
   
 <script>
   const basket = document.getElementById("basket");
