--- a/index.html
+++ b/index.html
@@ -94,10 +94,9 @@
       border-radius: 20px;
       box-shadow: 0 4px 8px rgba(0,0,0,0.2);
 
-      font-family: sans-serif;
+      font-family: 'Bad Script', cursive;
       font-size: 16px;
       line-height: 1.4;
-      text-align: center;
 
       pointer-events: none;
       z-index: 30;
