--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>С днём рождения, Джулс!</title>
 
-  <link href="https://fonts.googleapis.com/css2?family=Bad+Script&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Pangolin&display=swap" rel="stylesheet">
 
   <style>
     body {
@@ -18,7 +18,7 @@
       background-position: center center;
       background-size: cover;
       user-select: none;
-      font-family: "Bad Script", cursive;
+      font-family: 'Pangolin', cursive;
     }
 
     .container {
@@ -94,7 +94,7 @@
       border-radius: 20px;
       box-shadow: 0 4px 8px rgba(0,0,0,0.2);
 
-      font-family: 'Bad Script', cursive;
+      font-family: 'Pangolin', cursive;
       font-size: 16px;
       line-height: 1.4;
 
@@ -104,12 +104,6 @@
 
       text-align: justify;       /* весь текст по ширине */
   }
-    
-    #steam-text p:last-child {
-  font-weight: bold;       /* жирный */
-  color: #944a42;          /* нужный цвет */
-  text-align: center;      /* центр последнего абзаца, если нужно */
-}
 
     /* Пуф */
     .poof {
@@ -134,8 +128,7 @@
   
  <!-- Пар и текст-бабл -->
     <div id="steam-text">
-      После квиддича Дина словно летела по школьным коридорам в направлении своей башни. 
-      Не на метле, но всегда, кстати, мечтала полетать по школе, но увы.
+      Текст текст текст
     </div>
   </div>
   
