--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
 
   // 🔥 29 текстов баблов
   const messages = [
-    "Джулс, с днем рождения! Пусть этот год принесёт тебе много сил, радости и крутых событий. Желаю ярких впечатлений, вдохновения во всём за что берёшься и крепкого здоровья.<br><br><b>Дина</b>",
-    "Джулс, с днем рождения!<br><br>Каждый день испытывай удовольствие от жизни глобально и в мелочах, пусть все мечты непременно сбудутся. Благополучия, всех ресурсов в достатке, здоровья на максималках и большого-прибольшого счастья! *сердце*<br><br><b>Хаттори Райто</b>",
+    "💌 Дина:<br><br>Джулс, с днем рождения! Пусть этот год принесёт тебе много сил, радости и крутых событий. Желаю ярких впечатлений, вдохновения во всём за что берёшься и крепкого здоровья.",
+    "💌 Хаттори Райто:<br><br>Джулс, с днем рождения!<br><br>Каждый день испытывай удовольствие от жизни глобально и в мелочах, пусть все мечты непременно сбудутся. Благополучия, всех ресурсов в достатке, здоровья на максималках и большого-прибольшого счастья! *сердце*",
     "Поздравляю с Днем Рождения! Кушайте много сладкого и пейте много вкусного в Ваш день 🎂<br><br>Аделин Эйвери",
     "Дорогая Джулс!<br><br>Вот ты и стала старше на один год, а это значит, что ты всё ближе к «Мы можем называть её бабулею, а вы зовите её Джулией». Вообще-то, быть мудрой женщиной в летах не так уж и плохо! Поэтому желаю, чтобы возраст не наводил грусть, а был в радость. Пусть в твоей жизни всё будет хорошо. Работа работается, мечты сбываются, метла летает, семья процветает.<br><br>Люблю! Леончик!",
     "Желаю Вам крепкого здоровья, много магических открытий, блестящих идей и таких же отважных студентов, какими Вы помогали становиться поколениям гриффиндорцев.<br><br>Пусть Ваш день будет полон тепла, улыбок и небольшого волшебства (обещаю, никаких проклятий или шалостей из нашей гостиной!).<br><br>С уважением и добрыми пожеланиями,<br>студентка Слизерина ✨🐍<br><br>Владислава Грин",
